2011-04-11  vadim  <vadim@netcitadel.com>

	* iptables.g (comment): see #2336 Importer for iptables recognizes
	version stored in the top comment by iptables-save and sets
	version in the firewall object it creates.

2011-04-10  vadim  <vadim@netcitadel.com>

	* utils.cpp (expand_interface_with_phys_address): see #2324 "NAT +
	MAC-matching rules not generated properly". Iptables NAT rules
	matching a group of host objects with both IP and MAC addresses each
	in "Original Source" were not generated properly.

	* PolicyCompiler_PrintRule.cpp (_printOptionalGlobalRules): SF bug
	3178186 "Add ND/NS allow rules for the FORWARD chain". Rules that are
	added automatically to ipv6 Linux firewall to permit neighbor discovery
	packets should be also added to the FORWARD chain if the firewall is
	a bridge.

	* ObjectManipulator_create_new.cpp (actuallyCreateObject): see #2229
	"Multiple new objects with the same name". The GUI should automatically
	choose unique object names for new objects.

	* platforms.cpp (setInterfaceTypes): see #2224 "FreeBSD - Bridge
	interfaces with the name vlan<xx> don't show as Bridge Port
	Interfaces". This actually applies to all OS where we support vlan
	and bridge interfaces. Fwbuilder GUI should allow the user to set
	subinterface type to both "ethernet" and "vlan" when its parent
	interface has type "bridge". Setting subinterface type to
	"ethernet" makes it bridge port, while setting the type to "vlan"
	signals policy compiler that it should generate code to configure
	real vlan interface. If the name of the subinterface does not
	include the name of the parent, such as "vlan101", or when the
	name does not match vlan ID, such as "vlan8101", global
	preferences option "Verify interface names and autoconfigure their
	parameters..." should turned off. The option is located in the
	Preferences dialog, tab "Objects".

2011-04-08  vadim  <vadim@netcitadel.com>

	* FWBSettings.cpp (init): fixed bug (no #): "Show text